--- a/backend/_cartMicroservice/package.json
+++ b/backend/_cartMicroservice/package.json
@@ -8,11 +8,12 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "amqplib": "^0.10.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^7.6.3",
-    "amqplib": "^0.10.3"
+    "mongoose": "^7.6.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
-} 
+}
