--- a/backend/_userMicroservice/package.json
+++ b/backend/_userMicroservice/package.json
@@ -8,13 +8,14 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.6.3",
     "amqplib": "^0.10.3",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "bcryptjs": "^2.4.3"
+    "mongoose": "^7.6.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
-} 
+}
